# deluge-search

./: .tmuxp.yaml  envrc.example  list.txt  pyproject.toml  readme.md  setup.py
.vim/: coc-settings.json
deluge_search/: cli.py  client.py  ctx.py  torrent.py
